       ============================================
 Developed and maintained by Matthias Ettrich (ettrich@kde.org)


kwm (since 0.10) was almost rewritten from scratch in C++.  Many ideas
and some code went in from my experiences with the former kwm, which I
originally based on David Hogan's 9wm (a smart and small windowmanager
written in plain C).



In 0.13:
--------
patchlevel 5:
        - animation of shaded windows improved
         - "restart" command in addition to "go:" and "configure"
         - sensitive handling of maximized windows when the window 
            region changes.

patchlevel 4:
        - improved handling for floating menubars

patchlevel 3:
        - fixed semantics with FocusFollowsMouse and AutoRaise:
               There are now two kwmrc properties:
                      AutoRaise=on/off
                      AutoRaiseInterval=0...x
               If the inner window command for the left mouse button contains
               any raise, this applies to the first click.

patchlevel 2:
        - some additions to the middle mouse handling to emulate
           the former behaviour with MMB-movement.
        - new signal "initialized" emited to modules when the
          initialization is finished.
	- titlebar font choosing enabled (CT)
	- title alignment (CT) 
		( kwmrc\[General]\TitleAlignment=[left|middle|right] )
	- stickyTitles, stickyClasses lists (in a [Sticky] section) 
		a la noDecor*, noFocus* lists (CT)

patchlevel 1:
        - simplified outline drawing since the previous nifty stippled
           rectangle relied on some graphic hardware support (which
           was not available with all cards). Result: kwm's outline
           drawing (transparent movement of windows) should speed up
           with these cards a lot.


In 0.12:
--------
patchlevel 4:
        - introduced some support for multi-screen displays
        - fixed some drag problems 
        - fixed more drag problems with opaque movement